# iris

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/akin/: Cargo.toml
crates/akin/src/: db.rs  embedding.rs  lib.rs  scanner.rs  store.rs  vector_index.rs
crates/akin/src/db/: code_unit.rs  groups.rs  mod.rs  pairs.rs  project.rs  types.rs
crates/akin/src/hook/: config.rs  matcher.rs  mod.rs  parser.rs  types.rs
crates/akin/tests/: perf_comparison.rs  scanner_integration.rs
crates/arch/: Cargo.toml
crates/arch/src/: analyzer.rs  lib.rs  mermaid.rs
crates/arch/tests/: lsp_integration.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs  protocol.rs  types.rs
crates/lsp/src/adapters/: java.rs  mod.rs  rust.rs  swift.rs  typescript.rs  vue.rs
docs/: ARCHITECTURE.md  PROGRESS.md
src/: akin_cli.rs  arch_cli.rs  main.rs
