[package]
name = "akin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "akin-hook"
path = "src/bin/hook.rs"

[dependencies]
lsp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
ndarray.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-swift.workspace = true
anyhow = "1"
dirs = "5"
sha2 = "0.10"
usearch.workspace = true
cxx.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile.workspace = true
