[package]
name = "arch"
version.workspace = true
edition.workspace = true

[dependencies]
lsp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow = "1"

[dev-dependencies]
tempfile.workspace = true
