[package]
name = "lsp"
version.workspace = true
edition.workspace = true

[dependencies]
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
async-trait = "0.1"
url = { version = "2", features = ["serde"] }
